# investment-visualizer

./: README.MD  gold_readme.md  pyproject.toml  tabela.excalidraw
.streamlit/: config.toml
app/: streamlit_app.py
app/components/: charts.py  commons.py  table.py
app/config/: pages.py
app/pages/: home.py  page_1.py  page_2.py  page_3.py  page_4.py  page_clear.py  page_xp.py
data/bronze/: economias.csv
data/bronze/forms/: economias.csv
data/gold/202603/: 202603_gold_home_barras_snapshot.csv  202603_gold_home_botoes_snapshot.csv  202603_gold_home_linha_snapshot.csv  202603_gold_instituicao_barras_snapshot.csv  202603_gold_instituicao_label_snapshot.csv  202603_gold_instituicao_linha_snapshot.csv  202603_gold_pizza_expo_snapshot.csv  202603_gold_pizza_tipo_snapshot.csv  dummy_home_barras.csv
data/gold/202604/: 202604_gold_home_barras_snapshot.csv  202604_gold_home_botoes_snapshot.csv  202604_gold_home_linha_snapshot.csv  202604_gold_instituicao_linha_snapshot.csv  dummy_home_linha.csv
data/silver/snapshots/2026-03/: 2026-03_snapshot.csv
data/silver/tickers_cache/: tickers_cache.csv  tickers_cache.parquet
infra/: spark_utils.py  tickers_cache.py
notebooks/: gold_notebook_pyspark.ipynb  silver_notebook_pyspark.ipynb  test_notebook_charts.ipynb  test_notebook_pyspark.ipynb  test_variation.ipynb  tests_notebook_chart.ipynb  tests_notebook_pandas.ipynb
pipelines/: run_pipeline.py
pipelines/gold/: gold_metrics.py
pipelines/shared/: partition_handler.py
pipelines/silver/: funcoes.py  tickers.py  transformations.py
