[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "investment_visualizer"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
  "pyspark==3.5.8",
  "pandas==2.3.3",
  "pyarrow==23.0.1",
  "plotly==6.6.0",
  "streamlit==1.55.0",
  "notebook==7.4.7",
  "ipykernel==6.30.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infra*", "pipelines*", "app*"]